--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
 						</path>
 						<!-- This is needed when using Lombok 1/18/16 and above -->
 						<path>
-							<groupdId>org.projectlombok</groupdId>
+							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok-mapstruct-binding</artifactId>
 							<version>0.2.0</version>
 						</path>
